<resources>
    <string name="app_name">CO2 Mobility Calculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">Smart Energy 2019 Course Project</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_statistics">Statistics</string>

    <string name="notification_service_text">Watching your every move...</string>
    <string name="locations_required_title">Locations required</string>
    <string name="locations_required_goodbye">You didn\'t accept the location request. Unfortunately without locations, the application cannot work as intended. Goodbye!</string>
    <string name="locations_required_text">Without location access, the app cannot work as intended. Please accept the location request.</string>
    <string name="okay">Okay</string>
    <string name="start_scanning">Start Trip</string>
    <string name="stop_scanning">Stop Trip</string>
    <string name="stop">Stop</string>
    <string name="text_title">Probabilities: XGBoost vs NN</string>
    <string name="on_foot">On foot: %1$.2f \%%</string>
    <string name="train">Train: %1$.2f \%%</string>
    <string name="tramway">Tramway: %1$.2f \%%</string>
    <string name="bus">Bus: %1$.2f \%%</string>
    <string name="car">Car: %1$.2f \%%</string>
    <string name="bicycle">Bicycle: %1$.2f \%%</string>
    <string name="ebike">eBike: %1$.2f \%%</string>
    <string name="motorcycle">Motorcycle: %1$.2f \%%</string>
    <string name="percentage">%1$.2f \%</string>
    <string name="todo">TODO</string>
    <string name="empty_trip">Trip was empty!</string>
    <string name="home_distance_travelled">0</string>
    <string name="home_emissions">0</string>
    <string name="completed_journey">Completed Trip</string>
    <string name="title_activity_maps">Map</string>
    <string name="transition_trip_info">transition_trip_info</string>
    <string name="transition_trip_info_emissions_value">transition_trip_info_emissions_value</string>
    <string name="transition_trip_info_emissions_label">transition_trip_info_emissions_label</string>
    <string name="transition_trip_info_distance_value">transition_trip_info_distance_value</string>
    <string name="transition_trip_info_distance_label">transition_trip_info_distance_label</string>
    <string name="transition_trip_info_duration_value">transition_trip_info_duration_value</string>
    <string name="transition_trip_info_duration_label">transition_trip_info_duration_label</string>
    <string name="ongoing_trip">Ongoing Trip</string>
    <string name="empty_list">No trips yet.</string>
    <string name="transition_start_trip">transition_start_trip</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="cancel_trip_text">Going back will stop your trip.  Are you sure you want to stop this trip?</string>
    <string name="cancel_trip_ok">Stop Trip</string>
    <string name="cancel_trip_negative">Continue Trip</string>
    <string name="title_activity_onboarding">Onboarding</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="onboarding_1_title">Help fight global warming!</string>
    <string name="onboarding_1_subtitle">
         Transportation is responsible for 15% of the global greenhouse gas emissions.
    </string>
    <string name="onboarding_2_title">Understand Your Behavior</string>
    <string name="onboarding_2_subtitle">
        By tracking your journeys, you will gain a better understanding of your own habits.
    </string>
    <string name="onboarding_3_title">Save the Polar Bears!</string>
    <string name="onboarding_3_subtitle">
        Stay under the carbon budget defined by the UN to help reduce the worldwide carbon emissions.
    </string>
    <string name="emissions_budget_format">%.0fg/%.0fg</string>
    <string name="statistics_one_month_label">1 Month</string>
    <string name="statistics_three_months_label">3 Months</string>
    <string name="statistics_six_months_label">6 Months</string>
    <string name="statistics_one_year_label">1 Year</string>
</resources>
