<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColor"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <TextView
            style="@style/home_text_view_label"
            android:singleLine="true"
            android:text="@string/ongoing_trip"
            android:textColor="@android:color/white"
            android:textStyle="" />

        <TextView
            android:id="@+id/home_current_mode"
            style="@style/home_text_view_big"
            android:text="mode"
            android:textColor="@android:color/white"
            android:textSize="@dimen/material_text_display3" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_trip_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rounded_corners"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/default_padding"
        android:layout_margin="@dimen/default_padding"
        android:transitionName="@string/transition_trip_info">

        <LinearLayout style="@style/EqualSpacingCenterVerticalLL">

            <TextView
                android:id="@+id/home_emissions"
                style="@style/summary_text_view_value"
                android:text="@string/home_emissions"
                android:transitionName="@string/transition_trip_info_emissions_value" />

            <TextView
                android:id="@+id/home_emissions_label"
                style="@style/summary_text_view_label"
                android:text="grams"
                android:transitionName="@string/transition_trip_info_emissions_label" />

        </LinearLayout>

        <LinearLayout style="@style/EqualSpacingCenterVerticalLL">

            <TextView
                android:id="@+id/home_distance_travelled"
                style="@style/summary_text_view_value"
                android:text="@string/home_distance_travelled"
                android:transitionName="@string/transition_trip_info_distance_value" />

            <TextView
                android:id="@+id/home_distance_travelled_label"
                style="@style/summary_text_view_label"
                android:text="meters"
                android:transitionName="@string/transition_trip_info_distance_label" />

        </LinearLayout>

        <LinearLayout style="@style/EqualSpacingCenterVerticalLL">

            <Chronometer
                android:id="@+id/home_chronometer"
                style="@style/summary_text_view_value"
                android:transitionName="@string/transition_trip_info_duration_value" />

            <TextView
                android:id="@+id/home_chronometer_label"
                style="@style/summary_text_view_label"
                android:text="minutes"
                android:transitionName="@string/transition_trip_info_duration_label" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_start"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="8sp"
            android:text="@string/stop_scanning"
            android:transitionName="@string/transition_start_trip"
            app:icon="@drawable/icon_record"
            app:iconSize="@dimen/material_text_title" />

    </LinearLayout>

</RelativeLayout>
