<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/statistics_date_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:checkedChip="@+id/statistics_one_month_button"
        app:chipSpacingHorizontal="@dimen/default_padding"
        app:singleLine="true"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/statistics_one_month_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/statistics_one_month_label"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/statistics_three_months_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/statistics_three_months_label"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/statistics_six_months_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/statistics_six_months_label"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/statistics_one_year_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/statistics_one_year_label"/>

    </com.google.android.material.chip.ChipGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding"
        android:gravity="center">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/carbon_consumption_distance_travelled"
                style="@style/trip_summary_info_title"/>

            <TextView
                style="@style/trip_summary_info_subtext"
                android:text="Distance \nTraveled" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/carbon_consumption_co2_emitted"
                style="@style/trip_summary_info_title"/>

            <TextView
                style="@style/trip_summary_info_subtext"
                android:text="Carbon \nConsumed" />
        </LinearLayout>
    </LinearLayout>
    
    
    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/carbon_consumption_chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_padding" />
    
</LinearLayout>