<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.4"
            android:background="@color/primaryDarkColor">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/default_padding"
                android:gravity="center_vertical"
                android:orientation="vertical">
                <TextView
                    android:text="ongoing journey"
                    android:textColor="@android:color/white"
                    style="@style/home_text_view_label"
                    android:textStyle=""/>

                <TextView
                    android:id="@+id/home_current_mode"
                    android:text="mode"
                    android:textColor="@android:color/white"
                    style="@style/home_text_view_big"
                    android:textSize="50sp"/>

                <TextView
                    android:text="5 December"
                    android:textColor="@android:color/white"
                    style="@style/home_text_view_big"
                    android:textSize="30sp"
                    android:textStyle=""/>


            </LinearLayout>

        </FrameLayout>

            <LinearLayout
                android:id="@+id/home_predictions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/default_padding"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout style="@style/EqualSpacingCenterVerticalLL">
                    <TextView
                        android:id="@+id/home_emissions"
                        android:text="@string/home_emissions"
                        style="@style/home_text_view_value" />

                    <TextView
                        android:text="grams"
                        style="@style/home_text_view_label" />

                </LinearLayout>

                <LinearLayout style="@style/EqualSpacingCenterVerticalLL">
                    <TextView
                        android:id="@+id/home_distance_travelled"
                        android:text="@string/home_distance_travelled"
                        style="@style/home_text_view_value" />

                    <TextView
                        android:text="meters"
                        style="@style/home_text_view_label" />

                </LinearLayout>

                <LinearLayout style="@style/EqualSpacingCenterVerticalLL">
                    <Chronometer
                        android:id="@+id/home_chronometer"
                        style="@style/home_text_view_value"/>

                    <TextView
                        android:text="minutes"
                        style="@style/home_text_view_label" />

                </LinearLayout>


            </LinearLayout>

    </LinearLayout>

    <ToggleButton
        android:id="@+id/button_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_padding"
        android:background="@color/primaryColor"
        android:textOff="@string/start_scanning"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</LinearLayout>
